examples/test/testpolicy8110.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8110
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key20: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value31
      podSelector:
        matchLabels:
          key31: value16
          key46: value36
          key45: value47
